public/styles/main.css
/* ... */
.user-info {
    margin-top: 100px;
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.user-info h4 {
    margin-top: 20px;
}
.avatar {
    height: 150px;
    width: 150px;
    border-radius: 50%;
    border: 5px solid white;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
}
.edit {
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    position: absolute;
    color: black;
    cursor: pointer;
}
.edit-banner {
    height: 40px;
    width: 40px;
    right: 30px;
}
.edit-avatar {
    height: 30px;
    width: 30px;
    right: 0;
    top: 5px;
    font-size: 14px;
}

/* Settings */
.settings-container {
    width: 300px;
}

/* Detail */
.detail-rating-badge {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    font-weight: 600;
    background-color: #FFF5DA;
    height: 70px;
    width: 70px;
    border-radius: 50%;
}
.route-header {
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    border-radius: 10px;
}
.main-img {
    height: 300px;
    width: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 20px;
    display: flex;
    justify-content: flex-end;
    border-radius: 10px 10px 0 0;
}
.author {
    margin-top: 60px;
    border-radius: 0.25rem;
    border: 1px solid #a4a4a48f;
    padding: 20px;
    text-align: left;
}
.author h5, .author a {
    font-size: 16px;
}
.route-author-avatar {
    height: 80px;
    width: 80px;
    border-radius: 50%;
    background-size: cover;
    background-color: white;
    border: 5px solid  #5171F1;;
}
.detail-map {
    width: 100%;
    height: 400px;
    border-radius: 0.25rem;
}

/* Reviews */
.review-avatar {
    width: 35px;
    height: 35px;
    background-size: cover;
    border-radius: 50%;
}
.review-tools * {
    cursor: pointer;
    color: #ced4da;
}
.review-tools *:hover {
    color: #202930;
}
.review-form {
    position: relative;
}
.review-form h5 {
    z-index: 999;
}
.review-form button {
    width: 100%;
}
#close {
    cursor: pointer;
}

/* Rating */

/****** Style Star Rating Widget *****/

.rating { 
    border: none;
    width: fit-content;
    position: absolute;
  }
  
  .rating > input { display: none; } 
  .rating > label:before { 
    margin: 5px;
    font-size: 1.25em;
    font-family: FontAwesome;
    display: inline-block;
    content: "\f005";
  }
  
  .rating > .half:before { 
    content: "\f089";
    position: absolute;
  }
  
  .rating > label { 
    color: #ddd; 
   float: right; 
  }
  
  /***** CSS Magic to Highlight Stars on Hover *****/
  
  .rating > input:checked ~ label, /* show gold star when clicked */
  .rating:not(:checked) > label:hover, /* hover current star */
  .rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
  
  .rating > input:checked + label:hover, /* hover current star when changing rating */
  .rating > input:checked ~ label:hover,
  .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
  .rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 

.action-label {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 130px;
    height: fit-content;
    padding: 10px;
    border-radius: 7px;
    background-color: white;
    cursor: pointer;
}
.content-container {
    margin-top: 60px;
    margin-bottom: 30px;
    padding-right: 40px;
}
.content-container h3 {
    margin-bottom: 20px;
}
.content-container p {
    text-align: justify;
}
.badge {
    display: flex;
    align-items: center;
    width: fit-content;
    padding: 8px 15px 8px 15px;
    font-size: 13px;
    font-weight: 600;
}
.card-emoji {
    height: 18px;
    width: 18px;
}

/* Badge colors */
.hiking-badge {
    background-color: #D9E9D7;
    color: #50744d;
}
.mountaineering-badge {
    background-color: #E0D4FF;
    color: #005541;
}
.climbing-badge {
    background-color: #E9E9E9;
    color: #313131;
}
.ski-badge {
    background-color: #0057FF;
    color: #DDE4FF;
}
.mtb-badge {
    background-color: #FFF1DB;
    color: #624C00;
}
.Easy-badge {
    background-color: #D9E9D7;
    color: #50744d;
}
.Medium-badge {
    background-color: #FFF1C0;
    color: #DD8500;
}
.Hard-badge {
    background-color: #FFCFCF;
    color: #9B0000;
}
.Expert-badge {
    background-color: #EFD4FF;
    color: #6700A4;
}
.duration-badge {
    background-color: rgba(100, 148, 237, 0.274);
    color:rgb(9, 61, 202);
}
.distance-badge {
    background-color: rgba(164, 206, 164, 0.479);
    color:rgb(16, 98, 13);
}
.elevation-badge {
    background-color: rgba(233, 178, 107, 0.342);
    color:rgb(119, 77, 0);
}

/* Errors */
.error-img {
    height: 500px;
    animation: bounce 1s infinite alternate;
    -webkit-animation: bounce 1s infinite alternate;
}
@keyframes bounce {
from {
    transform: translateY(0px);
}
to {
    transform: translateY(-15px);
}
}
@-webkit-keyframes bounce {
from {
    transform: translateY(0px);
}
to {
    transform: translateY(-15px);
}
}

